fix: stretch the side bar on collection page (#1021)

--- a/app/components/collections-flyout/styles.scss
+++ b/app/components/collections-flyout/styles.scss
@@ -8,6 +8,7 @@
     background-color: $sd-flyout-bg;
     color: $sd-text;
     display: block;
+    height: 100%;
     min-height: calc(100vh - 56px);
   }
 
